update RoomController and RoomService